--- a/.github/workflows/gh-task-runner-Few-Shot.yml
+++ b/.github/workflows/gh-task-runner-Few-Shot.yml
@@ -131,6 +131,8 @@ jobs:
           model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
           model_args: ${{ github.event.inputs.model_args }}
           batch_size: ${{ github.event.inputs.batch_size }}
+          rwkv5_file_url: ${{ github.event.inputs.rwkv5_file_url }}
+          rwkv5_test_name: ${{ github.event.inputs.rwkv5_test_name }}
           upload_output: ${{ github.event.inputs.upload_output }}
 
   # upload_output:
