--- a/.github/workflows/gh-task-runner-Single.yml
+++ b/.github/workflows/gh-task-runner-Single.yml
@@ -1688,16 +1688,16 @@ on:
         description: 'Batch Size'
         required: true
         default: 'auto'
-      backend:
-        description: 'Backend to use'
-        required: true
-        default: 'nvidia-gpu'
-        type: choice
-        options:
-        - nvidia-gpu
-        - intel-gpu
-        - amd-gpu
-        - any-gpu
+      # backend:
+      #   description: 'Backend to use'
+      #   required: true
+      #   default: 'nvidia-gpu'
+      #   type: choice
+      #   options:
+      #   - nvidia-gpu
+      #   - intel-gpu
+      #   - amd-gpu
+      #   - any-gpu
       gpu_vram:
         description: 'Minimum GPU VRAM (ignored for MPS)'
         required: true
