changed to nvidia-gpu by default

--- a/.github/workflows/gh-task-runner-Single.yml
+++ b/.github/workflows/gh-task-runner-Single.yml
@@ -1747,7 +1747,7 @@ jobs:
 
     # Select the type of runner that the job will run on
     runs-on: 
-      - ${{ github.event.inputs.backend }}
+      - nvidia-gpu
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
 
     # Actual task setup, and run steps
@@ -1764,7 +1764,7 @@ jobs:
           model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
           model_args: ${{ github.event.inputs.model_args }}
           batch_size: ${{ github.event.inputs.batch_size }}
-          backend: ${{ github.event.inputs.backend }}
+          backend: nvidia-gpu
           rwkv5_file_url: ${{ github.event.inputs.rwkv5_file_url }}
           rwkv5_test_name: ${{ github.event.inputs.rwkv5_test_name }}
           upload_output: ${{ github.event.inputs.upload_output }}
@@ -1785,4 +1785,4 @@ jobs:
   #         model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
   #         model_args: ${{ github.event.inputs.model_args }}
   #         batch_size: ${{ github.event.inputs.batch_size }}
-  #         backend: ${{ github.event.inputs.backend }}
+  #         backend: nvidia-gpu
