--- a/.github/workflows/gh-task-runner-Large-Suite.yml
+++ b/.github/workflows/gh-task-runner-Large-Suite.yml
@@ -187,7 +187,7 @@ jobs:
 
     # Select the type of runner that the job will run on
     runs-on: 
-      - ${{ github.event.inputs.backend }}
+      - nvidia-gpu
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
       # - gpu-count-any
 
@@ -224,5 +224,5 @@ jobs:
   #         model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
   #         model_args: ${{ github.event.inputs.model_args }}
   #         batch_size: ${{ github.event.inputs.batch_size }}
-  #         backend: ${{ github.event.inputs.backend }}
+  #         backend: nvidia-gpu
           
