--- a/.github/workflows/gh-task-runner-Few-Shot.yml
+++ b/.github/workflows/gh-task-runner-Few-Shot.yml
@@ -49,7 +49,7 @@ on:
         required: false
       rwkv5_test_name:
         description: 'Model dev test name (for test)'
-        default: 'TEST_MODEL'
+        default: 'TEST_MODEL_FILE'
         required: false
       upload_output:
         description: 'Upload to HF / B2'
