fixing task upload pathing

--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -187,6 +187,8 @@ runs:
             RWKV5_TEST_NAME="${{ inputs.rwkv5_test_name }}"
           fi
 
+          PRETRAINED_MODEL="rwkv-x-dev/$RWKV5_TEST_NAME"
+
         else
           PRETRAINED_MODEL=${{ inputs.model_hf_repo }}
         fi
