--- a/.github/workflows/gh-task-runner-Alignment.yml
+++ b/.github/workflows/gh-task-runner-Alignment.yml
@@ -106,7 +106,7 @@ jobs:
           # - ethics_*
 
     # Name of the job
-    name: "[${{ matrix.run_task }}] ${{ github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
+    name: "[${{ matrix.run_task }}] ${{ github.event.inputs.rwkv5_file_url && github.event.inputs.rwkv5_test_name || github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
 
     # Due to github worker hard limitation, of 24 hours
     # we apply a timeout of 23 hours instead.
