--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -139,7 +139,7 @@ runs:
           set -o pipefail
 
           # Run it
-          accelerate launch --no-python lm_eval --model hf \
+          accelerate launch -m lm_eval --model hf \
           --model_args pretrained=$PRETRAINED_MODEL,${{ inputs.model_args }} \
           --tasks $TASK_TO_RUN \
           --batch_size ${{ inputs.batch_size }} \
@@ -150,7 +150,7 @@ runs:
           set -o pipefail
 
           # Run it
-          accelerate launch --no-python lm_eval --model hf \
+          accelerate launch -m lm_eval --model hf \
           --model_args pretrained=$PRETRAINED_MODEL,${{ inputs.model_args }} \
           --tasks $TASK_TO_RUN \
           --batch_size ${{ inputs.batch_size }} \
