drop the python install, use the node existing python?

--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -47,10 +47,10 @@ runs:
       shell: bash
       run: nvidia-smi
 
-    # Dependencies setup
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12' 
+    # # Dependencies setup
+    # - uses: actions/setup-python@v5
+    #   with:
+    #     python-version: '3.10' 
     
     - name: Install dependencies / setup project
       shell: bash
