--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -217,13 +217,14 @@ runs:
     ########################################################################
     - name: Install B2
       shell: bash
-      if: ${{ inputs.upload_output }}
+      if: ${{ inputs.upload_output }} && success()
       run: |
         # Install B2
         python -m pip install -U b2
     - name: Upload to B2
       shell: bash
-      if: ${{ inputs.upload_output }}
+      # Upload if configured and the task was successful
+      if: ${{ inputs.upload_output }} && success()
       run: |
         # Upload to backblaze
         b2 sync ./upload/ $B2_PATH_LM_EVAL_OUTPUT
