--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -156,8 +156,9 @@ runs:
 
           # Run it
           if [ $IS_CUSTOM_MODEL -eq 1 ]; then
+            # Trying to isolate down a bug with ACCELERATE
             lm_eval --model hf \
-            --model_args model_path=$PRETRAINED_MODEL,${{ inputs.model_args }} \
+            --model_args pretrained=$PRETRAINED_MODEL,${{ inputs.model_args }} \
             --tasks $TASK_TO_RUN \
             --batch_size ${{ inputs.batch_size }} \
             --log_samples --output_path ./output 2>&1 | tee -a ./output/taskrun.log
