--- a/.github/workflows/gh-task-runner-Focus-Suite.yml
+++ b/.github/workflows/gh-task-runner-Focus-Suite.yml
@@ -111,7 +111,7 @@ jobs:
 
           ### Slow suite metrics to include
           ### ----------------------------------------------------------------------------
-          - triviaqa
+          # - triviaqa
           - record
           - nq_open
 
