--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -77,6 +77,8 @@ runs:
         # Needed for RWKV v6
         pip install -U git+https://github.com/sustcsonglin/flash-linear-attention
         pip install triton==2.2.0
+        # Some lm eval install issues
+        pip install peft
 
         # Setup HF cache
         chmod +x ./gh-task-runner/*.sh
